Fix unit tests for WireMock 3
Signed-off-by: Taylor Smock <tsmock@meta.com>